--- a/test/config/test.cfg
+++ b/test/config/test.cfg
@@ -3,4 +3,7 @@
     {lin, "2020-04-11"}
 ]}.
 
-{egf_timer, test, {io, format, ["this is for test~n"]},  1}.
+{egf_timer, test, {egf_event, notify, [test, [["linda"]]]},  5}.
+
+{egf_event, test, [{io, format, ["hello ~p~n"]},
+                   {io, format, ["and i like you~p~n"]}]}.
