--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,31 @@
-{erl_opts, [debug_info]}.
+{minimum_otp_vsn, "21.3"}.
+
 {deps, []}.
+
+{erl_opts, [warn_unused_vars,
+            warn_shadow_vars,
+            warn_unused_import,
+            warn_obsolete_guard,
+            debug_info
+]}.
+
+{xref_checks, [undefined_function_calls, undefined_functions,
+               locals_not_used, deprecated_function_calls,
+               warnings_as_errors, deprecated_functions
+]}.
+
+{cover_enabled, true}.
+{cover_opts, [verbose]}.
+{cover_export_enabled, true}.
 
 {shell, [
   % {config, "config/sys.config"},
     {apps, [egf_config]}
 ]}.
+
+{relx, [{release, {"beta",  "0.0.1"},
+         [egf_config]},
+        {dev_mode, false},
+        {include_erts, false},
+
+        {extended_start_script, true}]}.
